@@ -57,6 +57,10 @@ Format:
 * what is entry type 0x000b ?
 * why does Windows hide the last 4096 bytes of the volume?
 
+20140629
+* small improvements to error reporting
+* compression method is now forced to effective 16-bits
+
 20140607
 * worked on tests
 * updated msvscpp files
